--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+ 
+}
+.container{
+  background-color: lightblue;
+  color: blue;
+
 }
